--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   "author": "Jadir Junior",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/module-alias": "^2.0.1",
-    "@types/node": "^16.4.7",
     "@types/supertest": "^2.0.11",
+    "@types/node": "14.17.6",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.31.0",
@@ -34,6 +35,9 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@overnightjs/core": "^1.7.6",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "module-alias": "^2.2.2"
   }
 }
