--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,6 @@
     "emitDecoratorMetadata": true
   },
   "include": ["./src/**/*.ts", "./test/**/*.ts"],
-  "exclude": ["./node_modules/*", "dist"]
+  "exclude": ["./node_modules/*", "dist"],
+  "types": ["node"]
 }
