--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start:dev": "ts-node-dev 'src/index.ts'",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
+    "style:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
+    "style:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
     "test:functional": "jest --projects ./test --runInBand",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,12 +25,13 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/module-alias": "^2.0.1",
-    "@types/supertest": "^2.0.11",
     "@types/node": "14.17.6",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.31.0",
     "jest": "^27.0.6",
+    "prettier": "^2.3.2",
     "supertest": "^6.1.4",
     "ts-jest": "^27.0.4",
     "ts-node-dev": "^1.1.8",
