--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@types/jest": "^26.0.24",
     "@types/module-alias": "^2.0.1",
     "@types/mongoose": "^5.11.97",
+    "@types/nock": "^11.1.0",
     "@types/node": "14.17.6",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.31.0",
     "jest": "^27.0.6",
+    "nock": "^13.1.1",
     "prettier": "^2.3.2",
     "supertest": "^6.1.4",
     "ts-jest": "^27.0.4",
