--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "style:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
     "test:unit": "jest",
     "test:functional": "jest --projects ./test --runInBand",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "yarn test:unit && yarn test:functional"
   },
   "keywords": [
     "nodejs",
