--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/config": "^0.0.39",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/module-alias": "^2.0.1",
     "@types/mongoose": "^5.11.97",
     "@types/nock": "^11.1.0",
@@ -51,6 +52,7 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongoose": "^5.13.5"
   }
