--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/http-status-codes": "^1.2.0",
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.4",
+    "@types/lodash": "^4.14.172",
     "@types/module-alias": "^2.0.1",
     "@types/mongoose": "^5.11.97",
     "@types/nock": "^11.1.0",
@@ -66,6 +67,7 @@
     "express-pino-logger": "^6.0.0",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
     "mongoose": "^5.13.5",
     "pino": "^6.13.1"
