--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "@types/lodash": "^4.14.172",
     "@types/module-alias": "^2.0.1",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/nock": "^11.1.0",
     "@types/node": "14.17.6",
     "@types/pino": "^6.3.11",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.31.0",
@@ -64,12 +66,14 @@
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-openapi-validator": "^4.13.0",
     "express-pino-logger": "^6.0.0",
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
     "mongoose": "^5.13.5",
-    "pino": "^6.13.1"
+    "pino": "^6.13.1",
+    "swagger-ui-express": "^4.1.6"
   }
 }
